--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: "EmergentWorks Curriculum"
 remote_theme: just-the-docs/just-the-docs
 color_scheme: "light"
 search_enabled: false
+logo: "EWLogo.png"
