--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "EmergentWorks Curriculum"
+title: "Curriculum"
 remote_theme: just-the-docs/just-the-docs
 color_scheme: "light"
 search_enabled: false
-# logo: "/assets/images/EWLogo.png"
+
