--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: "Curriculum"
 remote_theme: just-the-docs/just-the-docs
 color_scheme: "light"
 search_enabled: false
-
+logo: "/Curriculum/assets/images/EWLogo.png"
