--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ remote_theme: just-the-docs/just-the-docs@v0.4.0.rc2
 color_scheme: "light"
 search_enabled: false
 # logo: "/Curriculum/assets/images/EWLogo.png"
+collections:
+  legacy:
+    output: false
