--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Curriculum"
-remote_theme: just-the-docs/just-the-docs@v0.4.0.rc2
+remote_theme: just-the-docs/just-the-docs
 color_scheme: "light"
 search_enabled: false
 # logo: "/Curriculum/assets/images/EWLogo.png"
