--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,13 @@ title: "Curriculum"
 remote_theme: just-the-docs/just-the-docs
 color_scheme: "light"
 search_enabled: false
+
+baseurl: "/Curriculum" # the subpath of your site, e.g. /blog
+url: "https://mikecargal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+permalink: pretty
+exclude: [".legacy", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "vendor"]
+
 # logo: "/Curriculum/assets/images/EWLogo.png"
 
 # Footer last edited timestamp
@@ -15,3 +22,6 @@ gh_edit_repository: "https://github.com/mikecargal/Curriculum" # the github URL 
 gh_edit_branch: "jekylltheme" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+
+# Enable or disable heading anchors
+heading_anchors: true
