--- a/_config.yml
+++ b/_config.yml
@@ -51,4 +51,4 @@ search:
   rel_url: true
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
-  button: false
+  button: true
