--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ heading_anchors: true
 
 # Enable or disable the site search
 # Supports true (default) or false
-search_enabled: false
+search_enabled: true
 search:
   # Split pages into sections that can be searched individually
   # Supports 1 - 6, default: 2
