--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ color_scheme: "light"
 search_enabled: false
 
 baseurl: "/Curriculum" # the subpath of your site, e.g. /blog
-url: "https://mikecargal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://emergentworks.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: [".legacy", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "vendor"]
@@ -18,8 +18,8 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/mikecargal/Curriculum" # the github URL for your repo
-gh_edit_branch: "jekylltheme" # the branch that your docs is served from
+gh_edit_repository: "https://github.com/emergentworks/Curriculum" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
