--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ color_scheme: "light"
 search_enabled: false
 
 baseurl: "/curriculum" # the subpath of your site, e.g. /blog
-url: "https://emergentworks.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+#url: "https://emergentworks.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: [".legacy", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "vendor"]
@@ -52,3 +52,9 @@ search:
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
   button: true
+
+# External navigation links
+nav_external_links:
+  - title: 1:1 Mentorship Session Feedback & Attendance form
+    url: https://airtable.com/shr4s7qWESeM3vu61
+    hide_icon: false # set to true to hide the external link icon - defaults to false
