--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ search:
   button: true
 
 # External navigation links
-nav_external_links:
-  - title: 1:1 Mentorship Session Feedback & Attendance form
-    url: https://airtable.com/shr4s7qWESeM3vu61
-    hide_icon: false # set to true to hide the external link icon - defaults to false
+# nav_external_links:
+#   - title: 1:1 Mentorship Session Feedback & Attendance form
+#     url: https://airtable.com/shr4s7qWESeM3vu61
+#     hide_icon: false # set to true to hide the external link icon - defaults to false
