--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
+github: [metadata]
+
 # Enable or disable heading anchors
 heading_anchors: true
 
