--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ search_enabled: false
 
 baseurl: "/curriculum" # the subpath of your site, e.g. /blog
 url: PAGES_REPO_NWO # the base hostname & protocol for your site, e.g. http://example.com
-
+url_var: &ghurl PAGES_REPO_NWO
 description: "Emergent Works Curriculum"
 
 permalink: pretty
@@ -20,7 +20,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: ${{ site.repository }} # the github URL for your repo
+gh_edit_repository: {{ site.repository }} # the github URL for your repo
 gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
